<?xml version="1.0"?>
<package format="2">
  <name>ffmpeg_image_transport_msgs</name>
  <version>1.0.0</version>
  <description>messages for ffmpeg image transport plugin</description>

  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
